--- a/css/style.css
+++ b/css/style.css
@@ -44,8 +44,8 @@ title {
 }
 
 .logo img {
-  height: 100px;
-  width: 100px; /* Keep logo simple */
+  height: auto;
+  width: auto; /* Keep logo simple */
 }
 
 /* Title Styling */
