--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ title {
 /* Navigation Styling */
 .main-nav {
   background-color: #2C3E50;
-  text-align: left;
+  text-align: right;
   padding: 15px 0;
 }
 
