--- a/css/style.css
+++ b/css/style.css
@@ -97,9 +97,9 @@ title {
   0% {
     transform: translateX(0);
   }
-  100% {
-    transform: translateX(50%);
-  }
+  50% {
+        transform: translateX(10px);
+      }
 }
 
 /* Navigation Styling */
