--- a/css/style.css
+++ b/css/style.css
@@ -97,8 +97,8 @@ title {
   0% {
     transform: translateX(0);
   }
-  50% {
-        transform: translateX(10px);
+  100% {
+        transform: translateX(50%);
       }
 }
 
