--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 /* Global Styles */
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
   font-family: 'Arial', sans-serif; /* Clean professional font */
 }
 
@@ -411,6 +411,19 @@ title {
 
 /* Responsive Design for Mobile */
 @media (max-width: 768px) {
+.container{
+  width: 90%;
+  max-width: 100%;
+  margin:0 auto;
+  pasdding: 10px
+}
+
+  .content {
+    padding: 15px;
+    border: 1px solid #ccc;
+  }
+
+  
   .service-box {
     width: 100%;
     margin-bottom: 20px;
